--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
   "main": "./lib/cli.js",
   "type": "commonjs",
   "scripts": {
-    "test": "node . compare mysql://root:dev@localhost:3306/A mysql://root:dev@localhost:3306/B",
-    "dev": "ts-node ./src/cli.ts compare -v mysql://root:dev@localhost:3306/A mysql://root:dev@localhost:3306/B",
-    "dev:eager": "ts-node ./src/cli.ts compare -e -v mysql://root:dev@localhost:3306/A mysql://root:dev@localhost:3306/B",
+    "test": "jest ./test",
     "clean": "rimraf ./lib",
     "build": "npm run clean && tsc",
+    "pretest": "npm run build && rimraf ./tmp",
     "prepublishOnly": "npm run build"
   },
   "author": "",
@@ -31,6 +30,7 @@
   "devDependencies": {
     "@types/commander": "^2.12.0",
     "@types/node": "^22.10.5",
+    "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
